2013-08-05  Vanessa Gil <vanessa.gil@artica.es>

	* integria_dbdata.sql
	  extras/migrate.sql
	  include/fuctions_workunits.php
	  include/styles/flora.tabs.css
	  operation/users/user_spare_workunit.php: Fixed several
	bugs in 'Add spare workunit'.

2013-08-05  Dario Rodriguez <dario@artica.es>

	* operation/workorders/wo_notes.php,
	operation/workorders/wo.php: New feature to add
	notes to workorders.
	* integria_db.sql,
	extras/migrate.sql: Created db struct for workorder
	notes.

2013-08-05  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_config.php: Initialize parameter
	'update_manager_installed'.

2013-08-02  Vanessa Gil <vanessa.gil@artica.es>

	* include/expor_csv.php
	  include/functions_crm.php
	  operation/companies/company_detail.php
	  operation/companies/company_role.php
	  operation/contract/contract_detail.php
	  operation/contact/contact_detail.php
	  operation/invoices/invoices.php
	  operation/leads/lead_detail.php
	  operation/leads/template_manager.php: Fixed several bugs.

2013-08-01  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/projects/task.php: Deleted unused code.
	
	* include/integria_cron.php: Changed the function
	"delete_old_incidents". Now the incident is not
	deleted if the deletion of any related row fails.

2013-08-01  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* operation/workorders/wo.php: Fixed a bug on
	"start date", that makes impossible create or
	update that workorder value. Now the "start date"
	box appears as empty if the date is
	"0000-00-00 00:00:00".

2013-08-01  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/integria_cron.php: New functions:
	"delete_old_sessions_data", "delete_old_wo_data",
	"delete_old_wu_data", "delete_old_event_data" and
	"delete_old_audit_data". Improved the function
	"delete_old_incidents".
	
	* operation/projects/task.php
	  include/functions_tasks.php: Now the task tree
	only shows the name with grey background for the